--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Harshvam</title>
-    <link rel="icon" type="image/x-icon" href="pics/logo.png">
+    <link rel="icon" type="image/x-icon" href="pics/Logo.png">
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container-fluid">
-                <a href="#home"><img src="pics/logo.png" class="navbar-brand" alt="logo"></img></a>
+                <a href="#home"><img src="pics/Logo.png" class="navbar-brand" alt=""></img></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
