--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
         <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container-fluid">
-                <a href="#home"><img src="pics/Logo.png" class="navbar-brand" alt=""></img></a>
+                <a href="#home"><img src="pics/Logo.png" class="navbar-brand" alt="logo"></img></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
